exports[`test should render a default component 1`] = `
<div
  className="terra-DetailView">
  <div
    className="terra-DetailView-title">
    <h1
      className="terra-DetailView-primaryText" />
  </div>
  <hr
    className="terra-DetailView-divider" />
  <hr
    className="terra-DetailView-divider" />
  <div
    className="terra-DetailView-footerText" />
</div>
`;

exports[`test should render a title 1`] = `
<div
  className="terra-DetailView">
  <div
    className="terra-DetailView-title">
    <h1
      className="terra-DetailView-primaryText">
      Header
    </h1>
  </div>
  <hr
    className="terra-DetailView-divider" />
  <hr
    className="terra-DetailView-divider" />
  <div
    className="terra-DetailView-footerText" />
</div>
`;

exports[`test should render details 1`] = `
<div
  className="terra-DetailView">
  <div
    className="terra-DetailView-title">
    <h1
      className="terra-DetailView-primaryText">
      Header
    </h1>
    <div
      className="terra-DetailView-subtitle">
      Subtitle 1
    </div>
    <div
      className="terra-DetailView-subtitle">
      Subtitle 2
    </div>
  </div>
  <hr
    className="terra-DetailView-divider" />
  <hr
    className="terra-DetailView-divider" />
  <p>
     Detail information 
  </p>
  <hr
    className="terra-DetailView-divider" />
  <div
    className="terra-DetailView-footerText" />
</div>
`;

exports[`test should render footer 1`] = `
<div
  className="terra-DetailView">
  <div
    className="terra-DetailView-title">
    <h1
      className="terra-DetailView-primaryText">
      Header
    </h1>
    <div
      className="terra-DetailView-subtitle">
      Subtitle 1
    </div>
    <div
      className="terra-DetailView-subtitle">
      Subtitle 2
    </div>
  </div>
  <hr
    className="terra-DetailView-divider" />
  <hr
    className="terra-DetailView-divider" />
  <p>
     Detail information 
  </p>
  <hr
    className="terra-DetailView-divider" />
  <div
    className="terra-DetailView-footerText">
    Footer text
  </div>
</div>
`;

exports[`test should render graph 1`] = `
<div
  className="terra-DetailView">
  <div
    className="terra-DetailView-title">
    <h1
      className="terra-DetailView-primaryText">
      Header
    </h1>
    <div
      className="terra-DetailView-subtitle">
      Subtitle 1
    </div>
    <div
      className="terra-DetailView-subtitle">
      Subtitle 2
    </div>
  </div>
  <hr
    className="terra-DetailView-divider" />
  <div>
     This is where a graph would go 
  </div>
  <hr
    className="terra-DetailView-divider" />
  <div
    className="terra-DetailView-footerText" />
</div>
`;

exports[`test should render subtitles 1`] = `
<div
  className="terra-DetailView">
  <div
    className="terra-DetailView-title">
    <h1
      className="terra-DetailView-primaryText">
      Header
    </h1>
    <div
      className="terra-DetailView-subtitle">
      Subtitle 1
    </div>
    <div
      className="terra-DetailView-subtitle">
      Subtitle 2
    </div>
  </div>
  <hr
    className="terra-DetailView-divider" />
  <hr
    className="terra-DetailView-divider" />
  <div
    className="terra-DetailView-footerText" />
</div>
`;

exports[`test should render without a divider when indicated 1`] = `
<div
  className="terra-DetailView">
  <div
    className="terra-DetailView-title">
    <h1
      className="terra-DetailView-primaryText">
      Header
    </h1>
    <div
      className="terra-DetailView-subtitle">
      Subtitle 1
    </div>
    <div
      className="terra-DetailView-subtitle">
      Subtitle 2
    </div>
  </div>
  <p>
     Detail information 
  </p>
  <div
    className="terra-DetailView-footerText">
    Footer text
  </div>
</div>
`;
